# lintel

./: Cargo.toml  Makefile  README.md
docs/plans/: 2026-07-06-lintel-design-v2.md  2026-07-06-lintel-design.md  2026-07-12-command-palette-design.md
docs/research/: 2026-07-06-feasibility-findings.md
resources/: Info.plist
scripts/: bundle.sh  make-signing-cert.sh
src/: ax.rs  config.rs  hotkey.rs  main.rs  observer.rs  overlay.rs  palette.rs  settings.rs
