[package]
name = "lintel"
version = "0.1.0"
edition = "2024"
description = "Local floating menu bar for macOS windows"

[dependencies]
objc2 = "0.6.4"

[dependencies.objc2-foundation]
version = "0.3.2"
features = ["NSString", "NSArray", "NSTimer", "NSDate", "NSGeometry", "objc2-core-foundation"]

[dependencies.objc2-app-kit]
version = "0.3.2"
features = [
    "NSApplication", "NSResponder", "NSWindow", "NSPanel", "NSView", "NSControl",
    "NSButton", "NSButtonCell", "NSStackView", "NSVisualEffectView", "NSScreen",
    "NSColor", "NSEvent", "NSGraphics", "NSUserInterfaceLayout", "NSFont",
    "NSWorkspace", "NSRunningApplication",
]

[dependencies.objc2-core-foundation]
version = "0.3.2"
features = ["CFString", "CFArray", "CFDictionary", "CFRunLoop", "CFNumber", "CFCGTypes"]

[dependencies.objc2-application-services]
version = "0.3.2"
default-features = false
features = ["HIServices", "AXUIElement", "AXValue", "AXError", "std", "libc"]

# Phase 0 keeps the dependency set minimal; objc2-core-graphics / block2 / the styling
# and geometry crates come in with Phases 1-3 (see docs/plans/2026-07-06-lintel-design-v2.md).
