[package]
name = "lintel"
version = "0.1.0"
edition = "2024"
description = "Local floating menu bar for macOS windows"

[dependencies]
objc2 = "0.6.4"
block2 = "0.6.2"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies.objc2-service-management]
version = "0.3.2"
features = ["SMAppService"]

[dependencies.objc2-foundation]
version = "0.3.2"
features = [
    "NSString", "NSArray", "NSDictionary", "NSAttributedString", "NSTimer", "NSDate",
    "NSGeometry", "NSNotification", "objc2-core-foundation",
]

[dependencies.objc2-core-graphics]
version = "0.3.2"
features = ["CGColor"]

[dependencies.objc2-app-kit]
version = "0.3.2"
features = [
    "NSApplication", "NSResponder", "NSWindow", "NSPanel", "NSView", "NSControl",
    "NSButton", "NSButtonCell", "NSStackView", "NSVisualEffectView", "NSScreen",
    "NSColor", "NSEvent", "NSGraphics", "NSUserInterfaceLayout", "NSLayoutConstraint",
    "NSLayoutAnchor",
    "NSFont", "NSStatusBar", "NSStatusItem", "NSMenu", "NSMenuItem", "NSImage",
    "NSBitmapImageRep", "NSAppearance", "NSPopUpButton",
    "NSAttributedString", "NSAnimation", "NSAnimationContext", "NSWorkspace",
    "NSRunningApplication", "NSTabView", "NSTabViewItem", "NSSlider", "NSTextField",
    "NSText", "NSTextView", "NSProgressIndicator", "NSParagraphStyle", "NSCell",
    "objc2-core-foundation", "objc2-core-graphics", "objc2-quartz-core", "block2",
]

[dependencies.objc2-core-foundation]
version = "0.3.2"
features = ["CFString", "CFArray", "CFDictionary", "CFRunLoop", "CFNumber", "CFCGTypes"]

[dependencies.objc2-quartz-core]
version = "0.3.2"
features = ["CALayer", "CAMediaTimingFunction", "objc2-core-foundation", "objc2-core-graphics"]

[dependencies.objc2-application-services]
version = "0.3.2"
default-features = false
features = ["HIServices", "AXUIElement", "AXValue", "AXError", "std", "libc"]

# Phase 0 keeps the dependency set minimal; objc2-core-graphics / block2 / the styling
# and geometry crates come in with Phases 1-3 (see docs/plans/2026-07-06-lintel-design-v2.md).
